postgres-deployment.yaml
kind: Deployment
apiVersion: apps/v1
  name: postgres-deployment
  labels:
    app: demo-voting-app
spec:
  replicas: 1
  selector:
    matchLabels:
      app: demo-voting-app
      name: postgres-pod
  template:
    metadata:
      name: postgres-pod
      creationTimestamp: null
      labels:
        app: demo-voting-app
        name: postgres-pod
    spec:
      containers:
        - name: postgres
          image: 'postgres:9.4'
          ports:
            - containerPort: 5432
              protocol: TCP
          resources: {}
          terminationMessagePath: /dev/termination-log
          terminationMessagePolicy: File
          imagePullPolicy: IfNotPresent
      restartPolicy: Always
      terminationGracePeriodSeconds: 30
      dnsPolicy: ClusterFirst
      securityContext: {}
      schedulerName: default-scheduler
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxUnavailable: 25%
      maxSurge: 25%
  revisionHistoryLimit: 10
  progressDeadlineSeconds: 600
