result-route.yaml
kind: Route
apiVersion: route.openshift.io/v1
metadata:
  name: result
  labels:
    app: demo-voting-app
    name: result-service
spec:
  host: result-default.apps.mkt.cloudgarden.telefonica.com
  to:
    kind: Service
    name: result-service
    weight: 100
  port:
    targetPort: 80
  wildcardPolicy: None
