vote-route.yaml
kind: Route
apiVersion: route.openshift.io/v1
metadata:
  name: vote
  labels:
    app: demo-voting-app
    name: voting-service
spec:
  host: vote-default.apps.mkt.cloudgarden.telefonica.com
  to:
    kind: Service
    name: voting-service
    weight: 100
  port:
    targetPort: 80
  wildcardPolicy: None
